--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
 	  <version>5.3.1</version>
 	  <scope>test</scope>
 	</dependency>
+
+    <!-- PostgreSQL JDBC ドライバ -->
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.5</version>
+    </dependency>
   </dependencies>
 
     <build>
