ログ出力処理を変更

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,28 @@
         <version>2.16.1</version>
     </dependency>
 
+    <!-- SLF4J API -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.30</version>
+    </dependency>
+
+    <!-- Logback (SLF4Jの実装) -->
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.2.3</version>
+    </dependency>
+
+	<!-- Lombok -->
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.18.30</version>
+	    <scope>provided</scope>
+	</dependency>
+
     <!-- Apache POI (Excelファイル処理) -->
     <dependency>
         <groupId>org.apache.poi</groupId>
